ex3 debug finished --;

--- a/ex3_report/README.tex
+++ b/ex3_report/README.tex
@@ -153,7 +153,6 @@ The \filename{code} directory contains the followings:
 		\begin{filedescription}
 			\item [p\_array.mat] saved control points (part 2).  
 			\item [q\_array.mat] saved deformed points (part 2).
-			\item [F\_array.mat] calculated $f(\vec{x})$ values (part 1.2). The file was used for debugging.
 		\end{filedescription}
 	\item [files dir] provided funtions and files. Several images and .off files were additionally added for testing.   
 \end{filedescription}
@@ -176,6 +175,8 @@ In this exercise, moving least squares (MLS) were used for reconstruction of cur
 \item implementing the sharp feature preserving mesh smoothing proposed on the paper "Feature preserving point set surfaces based on non-linear kernel regression".
 \end{itemize}  
 
+
+\pagebreak
 
 %----------------------------------------------------------------------------------------
 %	Curve derivation
